kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api
  namespace: flask-api
  labels:
    app: flask-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-api
  strategy: {}
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
      - name: flask-api
        image: 755345766251.dkr.ecr.ap-south-1.amazonaws.com/flaskapi-gunicorn:latest
        ports:
          - containerPort: 8080
        resources: {}
