kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: flask-api
  namespace: flask-api
spec:
  selector:
    app: flask-api
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
